force-app/main/default/objects/Contact/fields/Agora__c.field-meta.xml
<CustomField>
    <fullName>Agora__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agora</label>
    <type>DateTime</type>
</CustomField>