force-app/main/default/objects/Contact/fields/DataDaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>DataDaAprovacao__c</fullName>
    <description>Data de aprovação do treinamento</description>
    <inlineHelpText>Data de aprovação do treinamento</inlineHelpText>
    <label>Data da Aprovação</label>
    <type>DateTime</type>
</CustomField>