force-app/main/default/objects/Contact/fields/EncaminharparaAprovacaoTreinamento__c.field-meta.xml
<CustomField>
    <fullName>EncaminharparaAprovacaoTreinamento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Iniciar o processo de de aprovação para treinamento</description>
    <inlineHelpText>Marque essa opção para iniciar o processo de de aprovação para treinamento</inlineHelpText>
    <label>Encaminhar para Aprovação do Treinamento</label>
    <type>Checkbox</type>
</CustomField>