force-app/main/default/objects/Contact/fields/FeedbackTreinamento__c.field-meta.xml
<CustomField>
    <fullName>FeedbackTreinamento__c</fullName>
    <description>Campo para armazenar informações relevantes do treinamento do usuário</description>
    <inlineHelpText>Campo para armazenar informações relevantes do treinamento do usuário</inlineHelpText>
    <label>Feedback Treinamento</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>