force-app/main/default/objects/Contact/fields/isTerraqueo__c.field-meta.xml
<CustomField>
    <fullName>isTerraqueo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que verifica se o usuário é terráqueo</description>
    <inlineHelpText>Campo que verifica se o usuário é terráqueo</inlineHelpText>
    <label>É terráqueo ?</label>
    <type>Checkbox</type>
</CustomField>