force-app/main/default/objects/Contact/fields/ResponsavelAprovacao__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelAprovacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário responsável por realizar o processo de aprovação do candidato</description>
    <inlineHelpText>Usuário responsável por realizar o processo de aprovação do candidato</inlineHelpText>
    <label>Responsável pela Aprovação</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResponTreinamento</relationshipName>
    <type>Lookup</type>
</CustomField>