force-app/main/default/objects/Contact/fields/StatusDoCandidato__c.field-meta.xml
<CustomField>
    <fullName>StatusDoCandidato__c</fullName>
    <label>Status do Candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aguardando aprovação p/ Treinamento</fullName>
            </value>
            <value>
                <fullName>Aprovado Direto</fullName>
            </value>
            <value>
                <fullName>Aprovado no Treinamento</fullName>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Em Treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado na Análise</fullName>
            </value>
            <value>
                <fullName>Reprovado na analise do Gestor</fullName>
            </value>
            <value>
                <fullName>Reprovado no Treinamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>